--- a/index.html
+++ b/index.html
@@ -93,53 +93,57 @@
       </div>
     </section><!-- /Hero Section -->
 
-    <!-- About Section -->
-  <section id="aboutus" class="about section light-background">
+   <!-- About Section -->
+<section id="aboutus" class="about section light-background">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>About us</h2>
-        <p>We’re two student brothers running The Vive — a youth-led resale business focused on quality, affordability, and sustainability. While we stay behind the scenes, our goal is simple: help great items find new life.</p>
-      </div><!-- End Section Title -->
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>About us</h2>
+    <p>We’re two student brothers running The Vive — a youth-led resale business focused on quality, affordability, and sustainability. While we stay behind the scenes, our goal is simple: help great items find new life.</p>
+  </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4">
-            <img src="assets/img/my-profile-img2.jpg" height="200" alt="">
-          </div>
-          <div class="col-lg-8 content">
-            <h2>A Brief Overview</h2>
-            <p class="fst-italic py-3">
-             The Vive gives quality pre-owned items a fresh start, making sustainable shopping easy and affordable. We provide links to our Vinted and eBay pages as well.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Type:</strong> <span>Resale Brand</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Founded:</strong> <span>2025</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Online Only</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Products:</strong> <span>Clothing, Books, Everyday Finds, Accesories</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Audiance</strong> <span>Students & Smart Shoppers</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Mission:</strong> <span>Affordable, Sustainable, Reliable</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Platform:</strong> <span>Vinted, Ebay and More</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Run By:</strong> <span>Student Team</span></li>
-                </ul>
-              </div>
-            </div>
-            <p class="py-3">
-            We believe every item deserves a second chance, and every shopper deserves great value. That’s why we’re passionate about reducing waste and making smart, sustainable choices easy.
-            </p>
-          </div>
-        </div>
-
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="row gy-4 justify-content-center">
+      
+      <!-- Left Column: Two Images -->
+      <div class="col-lg-4 d-flex flex-column align-items-center">
+        <img src="assets/img/my-profile-img2.jpg" class="img-fluid rounded shadow mb-3" alt="">
+        <img src="assets/img/about-extra.jpg" class="img-fluid rounded shadow" alt="">
       </div>
 
-    </section><!-- /About Section -->
+      <!-- Right Column: Text -->
+      <div class="col-lg-8 content">
+        <h2>A Brief Overview</h2>
+        <p class="fst-italic py-3">
+          The Vive gives quality pre-owned items a fresh start, making sustainable shopping easy and affordable. We provide links to our Vinted and eBay pages as well.
+        </p>
+        <div class="row">
+          <div class="col-lg-6">
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <strong>Type:</strong> <span>Resale Brand</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Founded:</strong> <span>2025</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Online Only</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Products:</strong> <span>Clothing, Books, Everyday Finds, Accessories</span></li>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <strong>Audience:</strong> <span>Students & Smart Shoppers</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Mission:</strong> <span>Affordable, Sustainable, Reliable</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Platform:</strong> <span>Vinted, eBay and More</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Run By:</strong> <span>Student Team</span></li>
+            </ul>
+          </div>
+        </div>
+        <p class="py-3">
+          We believe every item deserves a second chance, and every shopper deserves great value. That’s why we’re passionate about reducing waste and making smart, sustainable choices easy.
+        </p>
+      </div>
+    </div>
+  </div>
+
+</section><!-- /About Section -->
+
 
     
 
