--- a/index.html
+++ b/index.html
@@ -40,18 +40,11 @@
 
 <body class="index-page">
 
-  <header id="header" class="header dark-background d-flex flex-column">
-    <i class="header-toggle d-xl-none bi bi-list"></i>
+ <header id="header" class="header dark-background d-flex flex-column">
+  <a href="index.html" class="logo d-flex align-items-center justify-content-center">
+    <h1 class="sitename">The Vive</h1>
+  </a>
 
-    <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
-    </div>
-
-    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Alex Smith</h1>
-    </a>
 
     <div class="social-links text-center">
           <a href="https://twitter.com" class="twitter" target="_blank"><i class="bi bi-twitter-x"></i></a>
