--- a/index.html
+++ b/index.html
@@ -40,10 +40,18 @@
 
 <body class="index-page">
 
- <header id="header" class="header dark-background d-flex flex-column">
-  <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-    <h1 class="sitename">The Vive</h1>
-  </a>
+  <header id="header" class="header dark-background d-flex flex-column">
+    <i class="header-toggle d-xl-none bi bi-list"></i>
+
+    <div class="profile-img">
+      <img src="assets/img/my-profile-img1.jpg" alt="" class="img-fluid rounded-circle">
+    </div>
+
+    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
+    
+      <h1 class="sitename">The Vive</h1>
+    </a>
+
 
 
     <div class="social-links text-center">
