--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
   <style>
     .social-links a svg {
   vertical-align: middle;
-  margin-top: 100px; /* Adjust as needed */
+  margin-bottom: 100px; /* Adjust as needed */
 }
   </style>
 
