--- a/index.html
+++ b/index.html
@@ -833,9 +833,11 @@
   border-radius: 50%;
   margin: 0 5px;
   transition: all 0.3s ease;
+      margin-top: -5px;
 }
 
 .vinted-icon svg {
+  margin-top: -5px;
   width: 20px;
   height: 20px;
 }
