--- a/index.html
+++ b/index.html
@@ -579,12 +579,16 @@
 <section id="testimonials" class="testimonials section-bg py-5">
   <div class="container" data-aos="fade-up">
     <div class="section-title">
-      <h2><i class="bi bi-chat-dots"></i> What People Are Saying</h2>
-      <p>We’re just getting started — be the first to leave a review!</p>
+      <h2>What People Are Saying</h2>
+      <p>We’re just getting started — be the first to leave a review! Either leave us a positive review on Vinted/eBay or contact us directly below!</p>
     </div>
-    <div class="text-center">
-      <a href="#contact" class="btn btn-dark mt-3">Send Us Your Feedback</a>
-    </div>
+    <div class="text-center mb-3">
+  <i class="bi bi-star-fill text-warning fs-4"></i>
+  <i class="bi bi-star-fill text-warning fs-4"></i>
+  <i class="bi bi-star-fill text-warning fs-4"></i>
+  <i class="bi bi-star-fill text-warning fs-4"></i>
+  <i class="bi bi-star-fill text-warning fs-4"></i>
+</div>
   </div>
 </section>
 
