--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <li><a href="#shop"><i class="bi bi-cart navicon"></i> Shop</a></li>
       <li><a href="#featureditems"><i class="bi bi-bag navicon"></i> Featured Items</a></li>
       <li><a href="#ourprocess"><i class="bi bi-card-checklist navicon"></i> Our Process</a></li>
+       <li><a href="#testimonials"><i class="bi bi-chat-quote navicon"></i> Testimonials</a></li>
 
       <li class="dropdown">
         <a href="#faq"><i class="bi bi-menu-button navicon"></i> <span>FAQ's</span></a>
@@ -579,7 +580,7 @@
 <section id="testimonials" class="testimonials section-bg py-5">
   <div class="container" data-aos="fade-up">
     <div class="section-title">
-      <h2>What People Are Saying</h2>
+      <h2>Testimonials</h2>
       <p>We’re just getting started — be the first to leave a review! Either leave us a positive review on Vinted/eBay or contact us directly below!</p>
     </div>
     <div class="text-center mb-3">
