--- a/index.html
+++ b/index.html
@@ -507,8 +507,25 @@
 
     </section><!-- /Services Section -->
 
+    <!-- Placeholder Testimonials Section -->
+<section id="testimonials" class="testimonials light-background">
+  <div class="container" data-aos="fade-up">
+    <div class="section-title">
+      <h2>Testimonials</h2>
+      <p>We’re just getting started — be the first to leave a review! Either leave us a positive review on Vinted/eBay or contact us directly below!</p>
+    </div>
+    <div class="text-center mb-3">
+  <i class="bi bi-star-fill text-warning fs-4"></i>
+  <i class="bi bi-star-fill text-warning fs-4"></i>
+  <i class="bi bi-star-fill text-warning fs-4"></i>
+  <i class="bi bi-star-fill text-warning fs-4"></i>
+  <i class="bi bi-star-fill text-warning fs-4"></i>
+</div>
+  </div>
+</section>
+
 <!-- ======= FAQ Section ======= -->
-<section id="faq" class="faq section light-background">
+<section id="faq" class="faq section">
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
@@ -573,25 +590,6 @@
     </div> <!-- End accordion -->
   </div> <!-- End container -->
 </section> <!-- End FAQ Section -->
-
-
-
-<!-- Placeholder Testimonials Section -->
-<section id="testimonials" class="testimonials section-bg py-5">
-  <div class="container" data-aos="fade-up">
-    <div class="section-title">
-      <h2>Testimonials</h2>
-      <p>We’re just getting started — be the first to leave a review! Either leave us a positive review on Vinted/eBay or contact us directly below!</p>
-    </div>
-    <div class="text-center mb-3">
-  <i class="bi bi-star-fill text-warning fs-4"></i>
-  <i class="bi bi-star-fill text-warning fs-4"></i>
-  <i class="bi bi-star-fill text-warning fs-4"></i>
-  <i class="bi bi-star-fill text-warning fs-4"></i>
-  <i class="bi bi-star-fill text-warning fs-4"></i>
-</div>
-  </div>
-</section>
 
     
     
