--- a/index.html
+++ b/index.html
@@ -595,40 +595,41 @@
     
    
 
-   <!-- Contact Section -->
+  <!-- Contact Section -->
 <section id="contact" class="contact section light-background">
 
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
     <h2>Contact</h2>
-    <p>We’d love to hear from you — whether it's questions, suggestions, or partnership ideas. Drop us a message below.</p>
+    <p>Got a question or want to work with us? Reach out — we’ll get back to you soon!</p>
   </div><!-- End Section Title -->
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
     <div class="row gy-4">
 
-      <!-- Left Side Info -->
       <div class="col-lg-5">
         <div class="info-wrap">
-
           <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
-            <i class="bi bi-envelope flex-shrink-0"></i>
+            <i class="bi bi-telephone flex-shrink-0"></i>
             <div>
-              <h3>Email Us</h3>
-              <p>theviveofficial@gmail.com</p> <!-- Replace with your actual email -->
+              <h3>Call Us</h3>
+              <p>+44 7440 291364</p>
             </div>
           </div><!-- End Info Item -->
 
-          <!-- Optional map -->
-          <iframe src="https://www.google.com/maps?q=Dubai,+UAE&output=embed" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy"></iframe>
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+            <i class="bi bi-envelope flex-shrink-0"></i>
+            <div>
+              <h3>Email Us</h3>
+              <p>theviveofficial123@gmail.com</p>
+            </div>
+          </div><!-- End Info Item -->
         </div>
       </div>
 
-      <!-- Right Side Form -->
       <div class="col-lg-7">
-        <form action="https://formspree.io/f/yourformid" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+        <form action="https://formspree.io/f/manjrlpr" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
           <div class="row gy-4">
-
             <div class="col-md-6">
               <label for="name-field" class="pb-2">Your Name</label>
               <input type="text" name="name" id="name-field" class="form-control" required>
@@ -636,33 +637,30 @@
 
             <div class="col-md-6">
               <label for="email-field" class="pb-2">Your Email</label>
-              <input type="email" class="form-control" name="email" id="email-field" required>
+              <input type="email" name="email" id="email-field" class="form-control" required>
             </div>
 
             <div class="col-md-12">
               <label for="subject-field" class="pb-2">Subject</label>
-              <input type="text" class="form-control" name="subject" id="subject-field" required>
+              <input type="text" name="subject" id="subject-field" class="form-control" required>
             </div>
 
             <div class="col-md-12">
               <label for="message-field" class="pb-2">Message</label>
-              <textarea class="form-control" name="message" rows="8" id="message-field" required></textarea>
+              <textarea name="message" id="message-field" rows="10" class="form-control" required></textarea>
             </div>
 
             <div class="col-md-12 text-center">
-              <button type="submit" class="btn btn-dark">Send Message</button>
+              <button type="submit">Send Message</button>
             </div>
-
           </div>
         </form>
       </div><!-- End Contact Form -->
 
+    </div>
+  </div>
 
-        </div>
-
-      </div>
-
-    </section><!-- /Contact Section -->
+</section><!-- /Contact Section -->
 
   </main>
   <!-- Scroll Top -->
